# finance-hotspot-radar

./: .env.example  .gitignore  README.md  pyproject.toml
finance_hotspot_radar/: __init__.py  ai.py  analyzer.py  cli.py  config.py  formatter.py  models.py  scheduler.py  service.py  storage.py  web.py
finance_hotspot_radar/notify/: __init__.py  base.py  console.py  webhook.py
finance_hotspot_radar/skill/: SKILL.md
finance_hotspot_radar/sources/: __init__.py  base.py  rss.py  social.py
finance_hotspot_radar/tests/: test_analyzer.py  test_config.py  test_integration.py  test_keywords.py  test_storage_and_digest.py  test_web.py
